src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: 'Geist';
  src: url("/src/assets/fonts/geist/Geist-Regular.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'GeistMono';
  src: url("/src/assets/fonts/geist/GeistMono-Regular.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

body {
  font-family: "Geist", sans-serif;
}

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 0 0% 3.9%;
    --card: 0 0% 100%;
    --card-foreground: 0 0% 3.9%;
    --popover: 0 0% 100%;
    --popover-foreground: 0 0% 3.9%;
    --primary: 0 0% 9%;
    --primary-foreground: 0 0% 98%;
    --secondary: 0 0% 96.1%;
    --secondary-foreground: 0 0% 9%;
    --muted: 0 0% 96.1%;
    --muted-foreground: 0 0% 45.1%;
    --accent: 0 0% 96.1%;
    --accent-foreground: 0 0% 9%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;
    --border: 0 0% 89.8%;
    --input: 0 0% 89.8%;
    --ring: 0 0% 3.9%;
    --radius: 0.5rem;
    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;

    --game-border: 210 12% 65%;
    --game-hidden: 210 12% 98%;
    --game-revealed: 210 12% 72%;
    --game-button: 210 12% 87%;
    --game-hover: 213 60% 95%;
    --game-explodedmine: 0 84.2% 60.2%;
    --game-wrongflag: 48 96% 53%;
    
    --game-number-1: 256 100% 50%;
    --game-number-2: 124 100% 27%;
    --game-number-3: 0 100% 50%;
    --game-number-4: 255 100% 24%;
    --game-number-5: 0 100% 28%;
    --game-number-6: 180 100% 26%;
    --game-number-7: 0 0% 0%;
    --game-number-8: 0 0% 50%;
    --game-number-0: 0 0% 90%;
    --game-number--1: 60 100% 50%;
    --game-number--2: 304 100% 73%;
    --game-number--3: 180 85% 57%;
    --game-number--4: 75 100% 76%;
    --game-number--5: 180 100% 72%;
    --game-number--6: 360 100% 74%;
    --game-number--7: 0 0% 100%;
    --game-number--8: 0 0% 50%;
  }
  .dark {
    --background: 0 0% 3.9%;
    --foreground: 0 0% 98%;
    --card: 0 0% 3.9%;
    --card-foreground: 0 0% 98%;
    --popover: 0 0% 3.9%;
    --popover-foreground: 0 0% 98%;
    --primary: 0 0% 98%;
    --primary-foreground: 0 0% 9%;
    --secondary: 0 0% 14.9%;
    --secondary-foreground: 0 0% 98%;
    --muted: 0 0% 14.9%;
    --muted-foreground: 0 0% 63.9%;
    --accent: 0 0% 14.9%;
    --accent-foreground: 0 0% 98%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;
    --border: 0 0% 14.9%;
    --input: 0 0% 14.9%;
    --ring: 0 0% 83.1%;
    --chart-1: 220 70% 50%;
    --chart-2: 160 60% 45%;
    --chart-3: 30 80% 55%;
    --chart-4: 280 65% 60%;
    --chart-5: 340 75% 55%;

    --game-border: 210 12% 16%;
    --game-hidden: 210 12% 8%;
    --game-revealed: 210 12% 14%;
    --game-button: 210 12% 16%;
    --game-hover: 213 60% 10%;
    --game-explodedmine: 0 84.2% 40%;
    --game-wrongflag: 48 96% 40%;
    
    --game-number-1: 233 100% 70%;
    --game-number-2: 124 100% 33%;
    --game-number-3: 0 100% 50%;
    --game-number-4: 270 100% 45%;
    --game-number-5: 0 100% 40%;
    --game-number-6: 180 100% 30%;
    --game-number-7: 0 0% 40%;
    --game-number-8: 0 0% 60%;
    --game-number-0: 0 0% 80%;
    --game-number--1: 60 80% 50%;
    --game-number--2: 304 100% 73%;
    --game-number--3: 180 85% 57%;
    --game-number--4: 75 100% 76%;
    --game-number--5: 180 100% 72%;
    --game-number--6: 360 100% 74%;
    --game-number--7: 0 0% 100%;
    --game-number--8: 0 0% 50%;
  }
}

@layer base {
  * {
    @apply border-border;
  }

  body {
    @apply bg-background text-foreground;
  }

  h1 {
    @apply text-6xl font-bold;
  }

  h2 {
    @apply text-2xl font-bold;
  }

  h3 {
    @apply text-xl font-bold;
  }

  h4 {
    @apply font-bold;
  }

  p {
    @apply text-sm;
  }
}

